@startuml
'https://plantuml.com/object-diagram

class Main{
+ static void main(string [] args)
}

class StartMenu{
- String userName
- String userPassword
- String address
- List<User> registeredUsers = new LinkedList<>()
- List<String> restaurant = new ArrayList<>()
- List<String> category = new ArrayList<>()
- List<String> food = new ArrayList<>()
- List<String> drink = new ArrayList<>()
- List<String> dessert = new ArrayList<>()
- TextUI ui
- FileIO io
+ StartMenu(String userName, String userPassword, String address)
+ void CreateUser(String name,String password,String address)
+ User Login()
}

class User{
- String userName
- String userPassword
- String address;
- List <String> food
- List <String> orders
+ User(String userName,String userPassword,String address)
+ String getUserName()
+ String getUserPassword()
+ List<String> getFood()
+ List<String> getOrders()
+ void setUserName(String userName)
+ void setUserPassword(String userPassword)
+ void setAddress(String address)
+ void setFood(List<String> food)
+ void setOrders(List<String> orders)
+ void getAddress()
}

class Order{
- List <Restaurant> orders
+ Order(List<Restaurant> orders)
+ void String placeOrders()
+ void void displayOrder()
+ void void deleteOrders()
+ String toString()
}

class Delivery {
- double deliveryFee
+ Delivery(double delivery)
+ void double setDeliveryFee()
+ void double getDeliveryFee()
+ void double calculateDeliveryPrice(double deliveryFee, double distance)
+ String toString()
}

class Discount{
- double discount
- List<User> userDiscount
+ Discount(double discount)
+ void void setDiscount()
+ void double getDiscount()
+ void double addDiscountToOrder()
+ String toString()
}

class Payment{
- double payment
+ Payment(double payment)
+ double calculatePayment()
+ String toString()
}

 class Restaurant{
- String restaurantName
- String[] restaurant
- double rating
- String showMenuCard
- List<String> menuCard
- List<Restaurant> allRestaurant
- List <Restaurant> allItems
- String item
+ Restaurant(String restaurantName, String [] restaurant, double rating, String showMenuCard, List<String> menuCard, List<Restaurant> allRestaurant, List <Restaurant> allItems, String item)
+ void getItem()
+ List<String> getMenuCard()
+ String searchforCategory()
+ String searchForResurant()
+ String searchForItems()
+ String searchForDeliveryPrice()
+ String searchForRating()
+ String getRestaurantName()
+ double getRating()
+ String[] getRestaurant()
+ String toString()
}

class TextUI{
- Scanner scanner
+ String getInput(String msg)
+ void displayMessage(String msg)
+ int chooseRestaurant(List<Restaurant>)
}

class FileIO{
List<User> loadedUsers = new LinkedList<>()
+ List<User> readUserData()
+ void saveUserData (List<User> users)
+ void saveOrders (User user)
+ List<String> ShowSavedOrdreHistory(User user)
+ List<Restaurant> readRestuarantData()
+ List<Restaurant> readMenuCardData()
}


Main o-- StartMenu

StartMenu o-- TextUI
StartMenu o-- FileIO
StartMenu o-- User

User *-- Payment
User *-- Order
User o-- Discount

Order *-- Delivery


Restaurant o-- Discount



@enduml
